# GemmPractice

./: CMakeLists.txt  README.md  appveyor.yml
Includes/KernelTutorial/: Gemm.hpp
Sources/KernelTutorial/: CMakeLists.txt  Gemm.cpp  Test.cpp
Tests/UnitTests/: CMakeLists.txt  SimpleTest.cpp
